### Voltaire's Nightmare Changelog ###

# v 2.2.5 #
-Small fixes for the following mission trees: Papal States, Bogomilist
-The Prussian Confederacy will start with more provinces
-Instances of Reform Progress grow will now work correctly again

# v 2.2.4 #

-Small fixes for the following mission trees: Toulouse, Swabia
-Versailles is now located in the correct province
-Fixed a syntax error in the government names
-Fixed a duplicate insitution event
-Fixed Constantinople causing a crash when conquered while playing with Leviathan
-Nullified Paradox's absurd innovativeness rebalancing of 1.31 by reverting the values back to 1.30
-Sicily and the Papal States are now historical rivals
-The Teutonic Order and Livonian Order will no longer spawn with technology level 75
-Federations will form even slower now
-Some more NI rebalancing

# v 2.2.3 #

-Added the following new mercenary companies: Teutonic & Livonian Panzerreiters
-Small fixes for the following mission trees: Worms
-Fixed wrong localisation displayed for monument events
-Made two Republican government reforms more useful
-The Brandenburger Gate is now located in the correct province
-Fixed a broken estate privilege
-Provinces should no longer become uncolonized when a Federation forms
-Fixed Federations from forming after a couple of years by reducing cohesion gain

# v 2.2.2 #

-Updated the mod to EU4 version 1.31.5
-Added the following new National Idea sets: Bederkesa (contributed by Yannick)
-Added new mission tree for Khazaria and Huns with 25 missions (contribution by RetrogMGXII)
-Added new mission tree for Cornwall with 17 missions
-Added new mission tree for Teutonic Order & Livonian Order with 32 missions
-Reworked the following mission trees: Toulouse, Palatinate (thanks to FrenchKnight), Worms