@@ -400,7 +400,7 @@ teu_conquer_pomerania_mission = {
 	naval_morale = 0.05
 	sunk_ship_morale_hit_recieved = -0.25
 }
-teu_convert_prussia_mission {
+teu_convert_prussia_mission = {
 	culture_conversion_cost = -0.15
 }
 teu_conquer_gotland_mission_a = {
