@@ -202,13 +202,7 @@ country_event = {
 		has_institution = feudalism
 		capital_scope = { continent = europe }
 		government = monarchy
-		OR = {
-			current_age = age_of_empire
-			current_age = age_of_holy_wars
-			current_age = age_of_crisis
-			current_age = age_of_dynasticism
-			current_age = age_of_discovery
-		}
+		current_age = age_of_discovery
 		NOT = {
 			has_country_flag = last_jousting_tournament_held
 		}
@@ -342,6 +336,10 @@ country_event = {
 	trigger = {
 		religion = sunni
 		government = monarchy
+		OR = {
+			current_age = age_of_discovery
+			current_age = age_of_reformation
+		}
 		NOT = {
 			has_country_flag = diwani_script
 		}
