@@ -5825,23 +5825,7 @@ country_event = {
 		add_devotion = -10
 	}
 	option = {
-		name = "EVTOPTB710"
-		ai_chance = {
-			factor = 45
-			modifier = {
-				factor = 0.5
-				NOT = { stability = 1 }
-			}
-			modifier = {
-				factor = 1.5
-				stability = 2
-			}
-		}		
-		add_stability = -1
-	}
-	option = {
 		name = "EVTOPTC710"
-		highlight = yes
 		trigger = {
 			OR = { 
 				government = republic
