@@ -1100,7 +1100,7 @@ guiTypes = {
 				name ="low_piety"
 				spriteType = "GFX_piety_icon_low"
 				position = { x= -8 y = -66 }
-				Orientation = "CENTER_LEFT"
+				Orientation = "UPPER_LEFT"
 			}
 			
 			iconType =
@@ -1108,7 +1108,7 @@ guiTypes = {
 				name ="high_piety"
 				spriteType = "GFX_piety_icon_high"
 				position = { x= 242 y = -66 }
-				Orientation = "CENTER_LEFT"
+				Orientation = "UPPER_LEFT"
 			}
 			
 			iconType =
@@ -1714,7 +1714,6 @@ guiTypes = {
 				position = { x = 10 y = -37 }
 				font = "vic_18"
 				borderSize = {x = 0 y = 0}
-				text = "CHURCH_POWER"
 				maxWidth = 150
 				maxHeight = 25
 				Orientation = "UPPER_LEFT"
