@@ -109,7 +109,7 @@
  HUNNIC_EMPIRE: "Hunnic Empire"
  HUNNIC_EMPIRE_ADJ: "Hunnic"
  KHAZAR_EMPIRE: "Khazar Empire"
- KHAZAR_EMPIRE: "Khazar"
+ KHAZAR_EMPIRE_ADJ: "Khazar"
  BUCHSGAU: "Buchsgau"
  BUCHSGAU_ADJ: "Buchsgauer"
  JCB_NAME: "Jülich-Cleves-Berg"
