@@ -109,7 +109,7 @@
  HUNNIC_EMPIRE: "Hunnenreich"
  HUNNIC_EMPIRE_ADJ: "Hunnisch"
  KHAZAR_EMPIRE: "Chasarenreich"
- KHAZAR_EMPIRE: "Chasarisch"
+ KHAZAR_EMPIRE_ADJ: "Chasarisch"
  BUCHSGAU: "Buchsgau"
  BUCHSGAU_ADJ: "Buchsgauisch"
  JCB_NAME: "Jülich-Kleve-Berg"
