@@ -203,8 +203,6 @@
  estate_mamluks_ownership: "Mamluken-Landbesitz"
  estate_mamluks_disaster: "Unabhängigkeit der Mamluken"
  estate_mamluks_disaster_desc: "Die Mamluken sind so mächtig geworden, dass sie sich abgespalten haben, um ein eigenes Reich zu gründen, das sich unserer Kontrolle entzieht."
- estate_holy_orders_disaster_tooltip: "Wenn dies passiert, wird der Stand der §YMamluken§! unabhängig werden und ihre eigene Nation gründen!"
- estate_holy_orders_disaster_tooltip_cossacks: "Wenn dies passiert, wird der Stand der §YMamluken§! unabhängig werden und ihre eigene Nation gründen! Ihr könnt wählen, ob Ihr als diese neue Nation spielen möchtet."
  grant_consessions_to_the_mamluks: "Macht den Mamluken Zugeständnisse"
  grant_consessions_to_the_mamluks_tooltip: "Der Beschluss dieses Erlasses hat folgende Auswirkung:\nDer Stand der Mamluken erhält 20 Loyalität."
  estate_mamluks_bribe: "Mamluken begünstigen"
