@@ -311,18 +311,18 @@
  institution_events.79.d: "Stahl, Kohle, große Schornsteine und Öfen, die höher ragen als die mächtigste Burg des Mittelalters, oder der reichste Palast der Frühen Neuzeit... Jetzt, aufbauend auf der Erkenntnis der Aufklärung und kontinuierlichen Revolutionen in der Produktionstechnologie, wird die Welt von der Industrialisierung erfasst. Ländliche Bevölkerungen strömen in die Städte, um in neuen Fabriken Arbeit zu finden, während Materialien in erstaunlicher Geschwindigkeit gefördert werden, um den öffentlichen und militärischen Bedarf zu decken. Nicht nur die Landschaft hat sich verändert, auch die Denkweisen sind geprägt von der plötzlichen Präsenz von Beton und Eisen, wo früher die pastoralen Blicke reichlich vorhanden waren. Lasst die Dichter diese Hochzeit von Mammon und Muse ankündigen!"
  institution_events.79.a: "Das ändert alles..."
  institution_events.79.a.tt: "Länder, die die Institution §YIndustrialismus§! noch nicht vollständig §Yförderten§!, erhalten einen zunehmenden Malus auf Technologiekosten in Höhe von §R1%§! jährlich bis zu max. §R50%§!."
- institution_events.82.t: "Liberalismus"
- institution_events.82.d: "Um die Wende des neunzehnten Jahrhunderts beeinflussten große politische Theoretiker wie Adam Smith und James Madison die Welt mit ihren liberalen Idealen und erreichten im Zuge der nicht zu unterschätzenden Revolutionen in Frankreich und Amerika ein immer größeres Publikum. Gewaltenteilung, gleiche Rechte für alle Männer und Frauen, freier Marktkapitalismus, ein Ende des Feudalismus, sogar der utopische Sozialismus wurden im Zusammenhang mit dieser neuen radikalen liberalen Bewegung, die Europa und darüber hinaus erobert hat, vorgestellt.\nObwohl das Schreckgespenst groß ist, sind alle Mächte des alten Europa eine heilige Allianz eingegangen, um jenes zu exorzieren: Papst und Zar, Metternich und Guizot, französische Radikale und deutsche Polizeispitzel. Es ist höchste Zeit, dass die Liberalen diesem Lügenmärchen vom Grauen des Liberalismus mit einem Manifest der Ideologie selbst begegnen."
- institution_events.82.a: "Das ändert alles..."
- institution_events.82.a.tt: "Länder, die die Institution §YLiberalismus§! noch nicht vollständig §Yförderten§!, erhalten einen zunehmenden Malus auf Technologiekosten in Höhe von §R1%§! jährlich bis zu max. §R50%§!."
- institution_events.821.t: "Das Massaker von $PROVINCENAME$"
- institution_events.821.d: "Ein radikaler Agitator für das allgemeine Wahlrecht hat den wirtschaftlichen Abschwung innerhalb unserer Nation genutzt, um die Massen zum Protest zu bewegen. Die Demonstranten versammelten sich um eine Plattform in $PROVINCENAME$ und begannen, die Massen aufzuhetzen, als der örtliche Statthalter die Polizei schickte, um den Rädelsführer zu verhaften. Bei ihren Versuchen, ihn festzunehmen, stießen sie versehentlich eine Frau um und töteten ein kleines Kind, was fast augenblicklich zu Massenausschreitungen führte.\nDer Statthalter fordert nun die föderalen Behörden auf, ein Husarenheer zu entsenden, um die randalierenden Menschenmassen zu zerstreuen, aber dies könnte das Problem durch die Tötung weiterer Zivilisten nur verschlimmern. Wenn wir nicht aufpassen, könnte es bald zu einem ausgewachsenen Aufstand in der Provinz kommen."
- institution_events.821.a: "Entsendet die Armee"
- institution_events.821.b: "Reformiert die Gesellschaft"
- institution_events.822.t: "Der liberale Professor"
- institution_events.822.d: "Ein liberaler Professor und bekennender Atheist unterrichtete eine Klasse an einer Universität in [Root.Capital.GetCapitalName], als er beschloss, die Nicht-Existenz Gottes zu beweisen, indem er Gott herausforderte, ihn innerhalb von 15 Minuten niederzustrecken. Als die letzten Minuten verstrichen und der Professor immer noch aufrecht stand, schlug ein frommer [Root.Religion.GetName]er Student den Professor selbst nieder und erklärte, Gott sei zu sehr damit beschäftigt, die [Root.GetAdjective]en Truppen zu beschützen!\nNachdem er sich erholt hatte, stürmte der sichtlich erschütterte Professor aus dem Raum und meldete den Vorfall der Verwaltung und fordert nun von der Regierung eine Abfindung und die Bestrafung des für den Übergriff verantwortlichen Studenten."
- institution_events.822.a: "Wir können es uns leisten"
- institution_events.822.b: "Der Student hatte recht!"
+ institution_events.83.t: "Liberalismus"
+ institution_events.83.d: "Um die Wende des neunzehnten Jahrhunderts beeinflussten große politische Theoretiker wie Adam Smith und James Madison die Welt mit ihren liberalen Idealen und erreichten im Zuge der nicht zu unterschätzenden Revolutionen in Frankreich und Amerika ein immer größeres Publikum. Gewaltenteilung, gleiche Rechte für alle Männer und Frauen, freier Marktkapitalismus, ein Ende des Feudalismus, sogar der utopische Sozialismus wurden im Zusammenhang mit dieser neuen radikalen liberalen Bewegung, die Europa und darüber hinaus erobert hat, vorgestellt.\nObwohl das Schreckgespenst groß ist, sind alle Mächte des alten Europa eine heilige Allianz eingegangen, um jenes zu exorzieren: Papst und Zar, Metternich und Guizot, französische Radikale und deutsche Polizeispitzel. Es ist höchste Zeit, dass die Liberalen diesem Lügenmärchen vom Grauen des Liberalismus mit einem Manifest der Ideologie selbst begegnen."
+ institution_events.83.a: "Das ändert alles..."
+ institution_events.83.a.tt: "Länder, die die Institution §YLiberalismus§! noch nicht vollständig §Yförderten§!, erhalten einen zunehmenden Malus auf Technologiekosten in Höhe von §R1%§! jährlich bis zu max. §R50%§!."
+ institution_events.831.t: "Das Massaker von $PROVINCENAME$"
+ institution_events.831.d: "Ein radikaler Agitator für das allgemeine Wahlrecht hat den wirtschaftlichen Abschwung innerhalb unserer Nation genutzt, um die Massen zum Protest zu bewegen. Die Demonstranten versammelten sich um eine Plattform in $PROVINCENAME$ und begannen, die Massen aufzuhetzen, als der örtliche Statthalter die Polizei schickte, um den Rädelsführer zu verhaften. Bei ihren Versuchen, ihn festzunehmen, stießen sie versehentlich eine Frau um und töteten ein kleines Kind, was fast augenblicklich zu Massenausschreitungen führte.\nDer Statthalter fordert nun die föderalen Behörden auf, ein Husarenheer zu entsenden, um die randalierenden Menschenmassen zu zerstreuen, aber dies könnte das Problem durch die Tötung weiterer Zivilisten nur verschlimmern. Wenn wir nicht aufpassen, könnte es bald zu einem ausgewachsenen Aufstand in der Provinz kommen."
+ institution_events.831.a: "Entsendet die Armee"
+ institution_events.831.b: "Reformiert die Gesellschaft"
+ institution_events.832.t: "Der liberale Professor"
+ institution_events.832.d: "Ein liberaler Professor und bekennender Atheist unterrichtete eine Klasse an einer Universität in [Root.Capital.GetCapitalName], als er beschloss, die Nicht-Existenz Gottes zu beweisen, indem er Gott herausforderte, ihn innerhalb von 15 Minuten niederzustrecken. Als die letzten Minuten verstrichen und der Professor immer noch aufrecht stand, schlug ein frommer [Root.Religion.GetName]er Student den Professor selbst nieder und erklärte, Gott sei zu sehr damit beschäftigt, die [Root.GetAdjective]en Truppen zu beschützen!\nNachdem er sich erholt hatte, stürmte der sichtlich erschütterte Professor aus dem Raum und meldete den Vorfall der Verwaltung und fordert nun von der Regierung eine Abfindung und die Bestrafung des für den Übergriff verantwortlichen Studenten."
+ institution_events.832.a: "Wir können es uns leisten"
+ institution_events.832.b: "Der Student hatte recht!"
 #Tributary Events 
  tributary_events.1.d: "Unsere Apanagenherrschaft mit [Root.Overlord.GetName] ist sichtlich locker, hat aber dennoch eine Gelegenheit für begabte Beamte und Unternehmer geschaffen. Viele sind gekommen, um [Root.Overlord.Capital.GetCapitalName] als das beste Karriereziel zu betrachten, und mit jeder weiteren königlichen Steuerzahlung kommen mehr, um die großartige [Root.Overlord.GetAdjective]en Hauptstadt zu sehen.\nWährend es anfänglich einige Sorgen gab, dass dies zu einem Abfluss einiger der wertvollsten Persönlichkeiten unseres Landes führen könnte, so gibt es uns doch mehr Einfluss in einem weiten Umkreis von [Root.Overlord.GetName]. Die wenigen Menschen, die sich entscheiden zurückkehren, bringen ebenfalls wertvolle Erfahrung mit sich, die wir gut nutzen könnten."
  tributary_events.1.b: "Es ist zum Besten der [Root.GetAdjective]en Untertanen"
