@@ -278,8 +278,10 @@ vn_teu_liv_missions_slot_2 = {
 			samogitian_region = {
 				type = all
 				owner = {
-					tag = TEU
-					tag = LIV
+                    OR = {
+                        tag = TEU
+                        tag = LIV
+                    }
 				}
 			}
 		}
@@ -329,15 +331,19 @@ vn_teu_liv_missions_slot_2 = {
 			lithuania_region = {
 				type = all
 				owner = {
-					tag = TEU
-					tag = LIV
+                    OR = {
+                        tag = TEU
+                        tag = LIV
+                    }
 				}
 			}
 			sudovia_region = {
 				type = all
 				owner = {
-					tag = TEU
-					tag = LIV
+                    OR = {
+                        tag = TEU
+                        tag = LIV
+                    }
 				}
 			}
 			if = {
