@@ -1,9 +1,11 @@
 ### Voltaire's Nightmare Changelog ###
 
 # v 2.2.5 #
--Small fixes for the following mission trees: Papal States, Bogomilist
+-Small fixes for the following mission trees: Papal States, Teutonic Order, Livonian Order, Bogomilist
 -The Prussian Confederacy will start with more provinces
+-Fixed some overlapping interface 
 -Instances of Reform Progress grow will now work correctly again
+-Other minor localization/bug fixes
 
 # v 2.2.4 #
 
